# peeko

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-check.yml  release.yml
peeko/: Cargo.toml  README.md
peeko-cli/: Cargo.toml  README.md
peeko-cli/src/: config.rs  error.rs  interactive.rs  main.rs  utils.rs
peeko-cli/src/commands/: cat.rs  list.rs  ls.rs  mod.rs  pull.rs  remove.rs  stats.rs  tree.rs
peeko/src/: config.rs  env.rs  lib.rs  manifest.rs
peeko/src/fs/: mod.rs  vfs.rs
peeko/src/reader/: archive_utils.rs  config.rs  dir_tree.rs  image_reader.rs  mod.rs  vfs.rs
peeko/src/registry/: cli.rs  client.rs  manifest.rs  mod.rs  progress.rs
peeko/src/stats/: mod.rs
