[package]
name = "peeko-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
peeko = { path = "../peeko", features = ["progress"] }
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
indicatif = "0.18"
console = "0.15"
tabled = "0.15"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"

[[bin]]
name = "peeko"
path = "src/main.rs"
