[package]
name = "peeko-cli"
version = "0.1.0"
edition = "2024"
authors = ["Lurker <cloverzero@gmail.com>"]
repository = "https://github.com/cloverzero/peeko"
homepage = "https://github.com/cloverzero/peeko"
description = "A command-line interface for exploring container images without launching a container runtime."
license = "MIT"
keywords = ["oci", "container", "image", "filesystem", "explorer"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
peeko = { path = "../peeko", features = ["progress"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "6"
inquire = "0.7"
indicatif = "0.18"
console = "0.15"
tabled = "0.15"
thiserror = "2"
tokio = { version = "1.47", features = ["full"] }

[[bin]]
name = "peeko"
path = "src/main.rs"
