[package]
name = "peeko"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10.8"
base64 = "0.22.1"
anyhow = "1.0.100"
