[package]
name = "peeko"
version = "0.1.0"
edition = "2024"
authors = ["Lurker <cloverzero@gmail.com>"]
repository = "https://github.com/cloverzero/peeko"
homepage = "https://github.com/cloverzero/peeko"
description = "A library for exploring container images without launching a container runtime."
license = "MIT"
keywords = ["oci", "container", "image", "filesystem", "explorer"]
categories = ["filesystem"]

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2"
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10.8"
base64 = "0.22.1"
futures-util = "0.3.31"
flate2 = "1.1.2"
tar = "0.4.44"
zstd = "0.13.3"
indicatif = { version = "0.18", optional = true }

[features]
default = []
progress = ["indicatif"]
